--- a/flask_app/templates/index.html
+++ b/flask_app/templates/index.html
@@ -1,12 +1,45 @@
-<html>
-  <head>
-    <title>TOP</title>
-  </head>
-  <body>
-    <h1>TOP</h1>
-    <ui>
-      <li><a href="/login">ログインはこちら</a></li>
-      <li><a href="/logout">ログアウトはこちら</a></li>
-    </ui>
-  </body>
-</html>
+{% extends "base/base.html" %}
+
+{% block title %}
+{% endblock  %}
+
+{% block head %}
+    {{ super() }}
+{% endblock  %}
+
+{% block navbar %}
+<div class="ui secondary menu" style="background-color: tranparent;">
+  <div class="ui container">
+    <a class="active item" style="margin: 0.6rem" href={{ url_for("index.index") }}>
+      <i class="home icon"></i>トップ
+    </a>
+    <a class="item" style="margin: 0.6rem">
+      <i class="coffee layout icon"></i>コーヒーを選ぶ
+    </a>
+    <a class="item" style="margin: 0.6rem">
+      <i class="leaf layout icon"></i>お茶を選ぶ
+    </a>
+    <a class="item" style="margin: 0.6rem">
+      <i class="glass martini layout icon"></i>お酒を選ぶ
+    </a>
+    <div class="right menu">
+      <a class="item">
+          <i class="shopping cart icon"></i>カート
+        </a>
+      <a class="item">
+        <i class="question icon"></i>ヘルプ
+      </a>
+      <a class="item" href={{ url_for("auth.login") }}>
+        <i class="user icon"></i>ログイン
+      </a>
+    </div>
+  </div>
+</div>
+{% endblock %}
+
+{% block content %}
+
+{% endblock %}
+
+{% block scripts %}
+{% endblock %}
