--- a/flask_app/templates/login.html
+++ b/flask_app/templates/login.html
@@ -1,16 +1,45 @@
-<html>
-  <head>
-    <title>Login</title>
-  </head>
-  <body>
-    <h1>ログイン</h1>
-    <p>
-      <form method="POST" action="{{url_for('auth.login')}}">
-        {{ form.csrf_token }}
-        {{ form.email.label }}:{{ form.email }} 
-        {{ form.password.label }}:{{ form.password }}
-        {{ form.submit}}
-     </form>
-    </p>
-  </body>
-</html>
+{% extends "base/base.html" %}
+
+{% block title %}
+{% endblock  %}
+
+{% block head %}
+    {{ super() }}
+{% endblock  %}
+
+{% block navbar %}
+<div class="ui secondary menu" style="background-color: tranparent;">
+  <div class="ui container">
+    <a class="item" style="margin: 0.6rem" href={{ url_for("index.index") }}>
+      <i class="home icon"></i>トップ
+    </a>
+    <a class="item" style="margin: 0.6rem">
+      <i class="coffee layout icon"></i>コーヒーを選ぶ
+    </a>
+    <a class="item" style="margin: 0.6rem">
+      <i class="leaf layout icon"></i>お茶を選ぶ
+    </a>
+    <a class="item" style="margin: 0.6rem">
+      <i class="glass martini layout icon"></i>お酒を選ぶ
+    </a>
+    <div class="right menu">
+      <a class="item">
+          <i class="shopping cart icon"></i>カート
+        </a>
+      <a class="item">
+        <i class="question icon"></i>ヘルプ
+      </a>
+      <a class="active item" href={{ url_for("auth.login") }}>
+        <i class="user icon"></i>ログイン
+      </a>
+    </div>
+  </div>
+</div>
+{% endblock %}
+
+{% block content %}
+
+{% endblock %}
+
+{% block scripts %}
+{% endblock %}
