--- a/flask_app/templates/base/base.html
+++ b/flask_app/templates/base/base.html
@@ -7,12 +7,15 @@
             {% endblock %}
             <meta charset="utf-8">
             <meta name="viewport" content="width=device-width, initial-scale=1">
-            <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.5.0/dist/semantic.min.css">
-            <script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.5.0/dist/semantic.min.js"></script>
+            <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
+            <script defer src="https://use.fontawesome.com/releases/v5.14.0/js/all.js"></script>
         {% endblock %}
     </head>
     {% block body  %}
+
         <body>
+            <section class="section pt-1">
+            <div class="container">
             {% block navbar %}
             {% endblock  %}
         
@@ -21,7 +24,9 @@
 
             {% block footer %}
             {% endblock %}
-
+            </div>
+            </section>
         </body>
+
     {% endblock %}
 </html>
