--- a/flask_app/templates/dashboard.html
+++ b/flask_app/templates/dashboard.html
@@ -1,9 +1,115 @@
-<html>
-  <head>
-    <title>DashBoard</title>
-  </head>
-  <body>
-    <h1>DashBoard</h1>
-    <p>ログインが必要なページです。</p>
-  </body>
-</html>
+{% extends "base/base.html" %}
+
+{% block title %}
+<title>flask_in_docker - Top</title>
+{% endblock  %}
+
+{% block head %}
+    {{ super() }}
+{% endblock  %}
+
+{% block navbar %}
+<nav class="navbar" role="navigation" aria-label="main navigation">
+  <div class="navbar-brand">
+    <a class="navbar-item" href="{{ url_for("index.index") }}">
+      <img src="{{ url_for('static', filename='img/112x28.png') }}" width="112" height="28">
+    </a>
+
+    <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
+      <span aria-hidden="true"></span>
+      <span aria-hidden="true"></span>
+      <span aria-hidden="true"></span>
+    </a>
+  </div>
+
+  <div id="navbarBasicExample" class="navbar-menu">
+    <div class="navbar-start">
+      <a class="navbar-item" href={{ url_for("index.index") }}>
+        <span class="icon-text">
+          <span class="icon">
+            <i class="fas fa-home"></i>
+          </span>
+          <span>トップ</span>
+        </span>
+      </a>
+    </div>
+
+    <div class="navbar-end">
+      <a class="navbar-item" href={{ url_for("index.index") }}>
+        <span class="icon-text">
+          <span class="icon">
+            <i class="fas fa-user"></i>
+          </span>
+          <span>
+            {% if current_user.is_authenticated %}
+              {{ current_user.name }}
+            {% endif %}
+          </span>
+        </span>
+      </a>
+      <a class="navbar-item" href={{ url_for("auth.logout") }}>
+        <span class="icon-text">
+          <span class="icon">
+            <i class="fas fa-arrow-left"></i>
+          </span>
+          <span>ログアウト</span>
+        </span>
+      </a>
+    </div>
+  </div>
+</nav>
+{% endblock %}
+
+{% block content %}
+  <div class="columns is-vcentered pt-3">
+    <div class="column">
+      <div class="card">
+        <div class="card-content">
+          <h1 class="title is-4">
+            <a href="https://github.com/DreamPandaWorks/flask_in_docker">Welcome to flask_in_docker, {{ current_user.name }}!!! </a>
+          </h1>
+          <p>
+            Flask application in a Docker environment. Powered by nginx and uWSGI.<br>
+          </p>
+          <p>
+            <p class="menu-label">
+            Docker Images
+            </p>
+            <ul class="menu-list">
+              <li><a>ubuntu:20.04</a></li>
+              <li><a>mysql:8.0</a></li>
+            </ul>
+
+            <p class="menu-label">
+              Python Packages（in requirements.txt）
+            </p>
+            <ul class="menu-list">
+              <li><a>flask2.2.2</a></li>
+              <li><a>Flask-Login0.6.2</a></li>
+              <li><a>Flask-WTF1.0.1</a></li>
+              <li><a>Flask-Migrate4.0.0</a></li>
+              <li><a>Flask-Seeder1.2.0</a></li>
+              <li><a>PyMySQL1.0.2</a></li>
+              <li><a>flask-sqlalchemy3.0.2</a></li>
+              <li><a>cryptography38.0.4</a></li>
+              <li><a>uWSGI2.0.21</a></li>
+            </ul>
+          </p>
+        </div>
+      </div>
+    </div>
+    <div class="column">
+      <div class="card">
+        <div class="card-image">
+          <figure class="image is-4by3">
+            <img src="{{ url_for('static', filename='img/1280x720.png') }}" alt="Placeholder image">
+          </figure>
+        </div>
+      </div>
+    </div>
+  </div>
+
+{% endblock %}
+
+{% block scripts %}
+{% endblock %}
