--- a/flask_app/templates/index.html
+++ b/flask_app/templates/index.html
@@ -35,7 +35,7 @@
     </div>
 
     <div class="navbar-end">
-      <a class="navbar-item" href={{ url_for("auth.login") }}>
+      <a class="navbar-item" href={{ url_for("auth.register") }}>
         <span class="icon-text">
           <span class="icon">
             <i class="fas fa-user-plus"></i>
