[develop] update user view and template.

--- a/flask_app/templates/user.html
+++ b/flask_app/templates/user.html
@@ -110,7 +110,7 @@
           <div class="control has-icons-left">
             {{ form.old_password(class_="input", placeholder="Old password input") }}
             <span class="icon is-small is-left">
-              <i class="fas fa-user"></i>
+              <i class="fas fa-lock"></i>
             </span>
           </div>
         </div>
@@ -119,7 +119,7 @@
           <div class="control has-icons-left">
             {{ form.new_password(class_="input", placeholder="New password input") }}
             <span class="icon is-small is-left">
-              <i class="fas fa-user"></i>
+              <i class="fas fa-lock"></i>
             </span>
           </div>
         </div>
