[develop] update index.html anf dashboard.html

--- a/flask_app/templates/dashboard.html
+++ b/flask_app/templates/dashboard.html
@@ -96,6 +96,7 @@
               <li><a>flask2.2.2</a></li>
               <li><a>Flask-Login0.6.2</a></li>
               <li><a>Flask-WTF1.0.1</a></li>
+              <li><a>flask-paginate2022.1.8</a></li>
               <li><a>Flask-Migrate4.0.0</a></li>
               <li><a>Flask-Seeder1.2.0</a></li>
               <li><a>PyMySQL1.0.2</a></li>
