[1.0.1] append footer update button

--- a/flask_app/templates/index.html
+++ b/flask_app/templates/index.html
@@ -9,7 +9,7 @@
 {% endblock  %}
 
 {% block navbar %}
-<nav class="navbar" role="navigation" aria-label="main navigation">
+<nav id="notice" class="navbar" role="navigation" aria-label="main navigation">
   <div class="navbar-brand">
     <a class="navbar-item" href="{{ url_for("index.index") }}">
       <img src="{{ url_for('static', filename='img/112x28.png') }}" width="112" height="28">
