--- a/flask_app/templates/base/base.html
+++ b/flask_app/templates/base/base.html
@@ -1,36 +1,29 @@
 <!DOCTYPE html>
 <html>
   <head>
-    {% block head %} {% block title %}
-    <title></title>
-    {% endblock %}
+    {% block head %} 
+      {% block title %}
+        <title></title>
+      {% endblock %}
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css"
-    />
-    <script
-      defer
-      src="https://use.fontawesome.com/releases/v5.14.0/js/all.js"
-    ></script>
+    <link rel="stylesheet" href="{{ url_for('static', filename='node_modules/bulma/css/bulma.min.css')}}"/>
+    <script src="{{ url_for('static', filename='node_modules/bulma-toast/dist/bulma-toast.min.js')}}"></script>
+    <script defer src="https://use.fontawesome.com/releases/v5.14.0/js/all.js"></script>
     {% endblock %}
   </head>
   {% block body %}
-
   <body>
     <section class="section pt-1">
       <div class="container">
-        {% block navbar %} 
-        {% endblock %} 
-
-        {% block content %} 
-        {% endblock %} 
-        {% block footer %} 
-        {%endblock %}
+        {% block navbar %} {% endblock %} 
+        {% block content %} {% endblock %} 
+        {% block scripts %} {% endblock %} 
       </div>
     </section>
   </body>
+
+  {% block footer %} {%endblock %}
 
   {% endblock %}
 </html>
