--- a/flask_app/templates/dashboard.html
+++ b/flask_app/templates/dashboard.html
@@ -9,64 +9,7 @@
 {% endblock  %}
 
 {% block navbar %}
-<nav class="navbar" role="navigation" aria-label="main navigation">
-  <div class="navbar-brand">
-    <a class="navbar-item" href="{{ url_for("index.index") }}">
-      <img src="{{ url_for('static', filename='img/112x28.png') }}" width="112" height="28">
-    </a>
 
-    <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
-      <span aria-hidden="true"></span>
-      <span aria-hidden="true"></span>
-      <span aria-hidden="true"></span>
-    </a>
-  </div>
-
-  <div id="navbarBasicExample" class="navbar-menu">
-    <div class="navbar-start">
-      <a class="navbar-item" href={{ url_for("index.index") }}>
-        <span class="icon-text">
-          <span class="icon">
-            <i class="fas fa-home"></i>
-          </span>
-          <span>トップ</span>
-        </span>
-      </a>
-      <a class="navbar-item" href={{ url_for("users") }}>
-        <span class="icon-text">
-          <span class="icon">
-            <i class="fas fa-users"></i>
-          </span>
-          <span>ユーザー一覧
-          </span>
-        </span>
-      </a>
-    </div>
-
-    <div class="navbar-end">
-      <a class="navbar-item" href={{ url_for("user") }}>
-        <span class="icon-text">
-          <span class="icon">
-            <i class="fas fa-user"></i>
-          </span>
-          <span>
-            {% if current_user.is_authenticated %}
-              {{ current_user.name }}
-            {% endif %}
-          </span>
-        </span>
-      </a>
-      <a class="navbar-item" href={{ url_for("auth.logout") }}>
-        <span class="icon-text">
-          <span class="icon">
-            <i class="fas fa-arrow-left"></i>
-          </span>
-          <span>ログアウト</span>
-        </span>
-      </a>
-    </div>
-  </div>
-</nav>
 {% endblock %}
 
 {% block content %}
@@ -103,6 +46,13 @@
               <li><a>flask-sqlalchemy3.0.2</a></li>
               <li><a>cryptography38.0.4</a></li>
               <li><a>uWSGI2.0.21</a></li>
+            </ul>
+            <p class="menu-label">
+              npm Packages（in package.json）
+            </p>
+            <ul class="menu-list">
+              <li><a>bulma</a></li>
+              <li><a>bulma-toast</a></li>
             </ul>
           </p>
         </div>
