--- a/flask_app/templates/login.html
+++ b/flask_app/templates/login.html
@@ -57,6 +57,8 @@
 {% endblock %}
 
 {% block content %}
+<div id="pageloader" class="pageloader" style="background-color: rgba(0, 0, 0, 0.8)"><span class="title">Loading...</span></div>
+
 <div class="hero is-halfheight">
   <div class="hero-body">
     <div class="container has-text-centered">
@@ -64,29 +66,39 @@
         <div class="box">
           <img src="{{ url_for('static', filename='img/320x320.png') }}">
 
-          <form action="{{ url_for("auth.login") }}" method="POST" name="login_form">
+          <form action="{{ url_for("auth.login") }}" method="POST" id="login_form" name="login_form">
             {{ form.csrf_token }}
             <div class="field">
               <label class="label has-text-left">Email</label>
               <div class="control has-icons-left">
-                {{ form.email(class_="input", placeholder="Email input") }}
+                {{ form.email(class_="input", placeholder="Email input", required=False) }}
                 <span class="icon is-small is-left">
                   <i class="fas fa-envelope"></i>
                 </span>
               </div>
             </div>
+            {% if form.errors["email"] %}
+              <div class="notification is-warning is-light">
+                {{ form.errors['email'][0] }}
+              </div>
+            {% endif %}
             <div class="field">
               <label class="label has-text-left">Password</label>
               <div class="control has-icons-left">
-                {{ form.password(class_="input", type="password", placeholder="Password input", value="") }}
+                {{ form.password(class_="input", type="password", placeholder="Password input", value="", required=False) }}
                 <span class="icon is-small is-left">
                   <i class="fas fa-lock"></i>
                 </span>
               </div>
             </div>
+            {% if form.errors["password"] %}
+              <div class="notification is-warning is-light">
+                {{ form.errors['password'][0] }}
+              </div>
+            {% endif %}
             <div class="field has-text-left">
               <p class="control">
-                {{ form.submit(class_="button has-background-link-dark has-text-white-bis", type="submit", value="ログイン") }}
+                {{ form.submit(class_="button has-background-link-dark has-text-white-bis", type="submit", form="login_form", onclick="javascript:document.getElementById('pageloader').classList.add('is-active');", value="ログイン") }}
               </p>
             </div>
           </form>
@@ -110,13 +122,7 @@
           bulmaToast.toast({ message: "{{ message }}", type: 'is-warning', position: "top-right", duration: 5000, closeOnClick: true, pauseOnHover: true, dismissible: true});
         </script>
       {% endif %}
-    {% endfor %}
-  {% endif %}
 
-  {% if form.errors %}
-    {% set error_message = "\n".join(form.errors) %}
-    <script>
-      bulmaToast.toast({ message: "{{ error_message }}", type: 'is-warning', position: "top-right", duration: 5000, closeOnClick: true, pauseOnHover: true, dismissible: true});
-    </script>
+    {% endfor %}
   {% endif %}
 {% endblock %}
