--- a/flask_app/templates/register.html
+++ b/flask_app/templates/register.html
@@ -9,6 +9,7 @@
 {% endblock  %}
 
 {% block navbar %}
+<div id="pageloader" class="pageloader" style="background-color: rgba(0, 0, 0, 0.8)"><span class="title">Loading...</span></div>
 <nav class="navbar" role="navigation" aria-label="main navigation">
   <div class="navbar-brand">
     <a class="navbar-item" href="{{ url_for("index.index") }}">
@@ -57,27 +58,6 @@
 {% endblock %}
 
 {% block content %}
-
-{% if get_flashed_messages() %}
-  <article class="message is-link">
-    {% for message in get_flashed_messages() %}
-      <div class="message-body">
-        {{ message }}
-      </div>
-    {% endfor %}
-  </article>
-{% endif %}
-
-{% if form.errors %}
-  {% for index in form.errors %}
-  <article class="message is-link">
-    <div class="message-body">
-      {{ "".join(form.errors[index]) }}
-    </div>
-  </article>
-  {% endfor %}
-{% endif %}
-
 <div class="hero is-halfheight">
   <div class="hero-body">
     <div class="container has-text-centered">
@@ -85,38 +65,53 @@
         <div class="box">
           <img src="{{ url_for('static', filename='img/320x320.png') }}">
 
-          <form action="{{ url_for("auth.register") }}" method="POST" name="register_form">
+          <form action="{{ url_for("auth.register") }}" method="POST" id="register_form" name="register_form">
             {{ form.csrf_token }}
             <div class="field">
               <label class="label has-text-left">Email</label>
               <div class="control has-icons-left">
-                {{ form.email(class_="input", placeholder="Email input") }}
+                {{ form.email(class_="input", placeholder="Email input", required=False) }}
                 <span class="icon is-small is-left">
                   <i class="fas fa-envelope"></i>
                 </span>
               </div>
             </div>
+            {% if form.errors["email"] %}
+              <div class="notification is-warning is-light">
+                {{ form.errors['email'][0] }}
+              </div>
+            {% endif %}
             <div class="field">
               <label class="label has-text-left">Username</label>
               <div class="control has-icons-left">
-                {{ form.user_name(class_="input", placeholder="Username input") }}
+                {{ form.user_name(class_="input", placeholder="Username input", required=False) }}
                 <span class="icon is-small is-left">
                   <i class="fas fa-user"></i>
                 </span>
               </div>
             </div>
+            {% if form.errors["user_name"] %}
+              <div class="notification is-warning is-light">
+                {{ form.errors['user_name'][0] }}
+              </div>
+            {% endif %}
             <div class="field">
               <label class="label has-text-left">Password</label>
               <div class="control has-icons-left">
-                {{ form.password(class_="input", type="password", placeholder="Password input", value="") }}
+                {{ form.password(class_="input", type="password", placeholder="Password input", value="", required=False) }}
                 <span class="icon is-small is-left">
                   <i class="fas fa-lock"></i>
                 </span>
               </div>
             </div>
+            {% if form.errors["password"] %}
+              <div class="notification is-warning is-light">
+                {{ form.errors['password'][0] }}
+              </div>
+            {% endif %}
             <div class="field has-text-left">
               <p class="control">
-                {{ form.submit(class_="button has-background-link-dark has-text-white-bis", type="submit", value="新規登録") }}
+                {{ form.submit(class_="button has-background-link-dark has-text-white-bis", type="submit", form="register_form", onclick="javascript:document.getElementById('pageloader').classList.add('is-active');", value="新規登録") }}
               </p>
             </div>
           </form>
@@ -128,4 +123,33 @@
 {% endblock %}
 
 {% block scripts %}
+  {% if get_flashed_messages() %}
+    {% for category, message in get_flashed_messages(with_categories=true) %}
+      {% if category == "success" %}
+        <script>
+          bulmaToast.toast({ message: "{{ message }}", type: 'is-link', position: "top-right", duration: 5000, closeOnClick: true, pauseOnHover: true, dismissible: true});
+        </script>
+      {% endif %}
+      {% if category == "failure" %}
+        <script>
+          bulmaToast.toast({ message: "{{ message }}", type: 'is-warning', position: "top-right", duration: 5000, closeOnClick: true, pauseOnHover: true, dismissible: true});
+        </script>
+      {% endif %}
+
+    {% endfor %}
+  {% endif %}
+  <script>
+    document.addEventListener('DOMContentLoaded', () => {
+      const $navbarBurgers = Array.prototype.slice.call(document.querySelectorAll('.navbar-burger'), 0);
+    
+      $navbarBurgers.forEach( el => {
+        el.addEventListener('click', () => {
+          const target = el.dataset.target;
+          const $target = document.getElementById(target); 
+          el.classList.toggle('is-active');
+          $target.classList.toggle('is-active');
+        });
+      });
+    });
+  </script>
 {% endblock %}
