--- a/flask_app/templates/user.html
+++ b/flask_app/templates/user.html
@@ -115,7 +115,7 @@
   <div class="box column is-8 is-offset-2" style="padding:0;background-color:#EFEFEF;">
     <div class="field has-text-left">
       <p class="control">
-        {{ form.submit(class_="button has-background-link-dark has-text-white-bis is-medium", type="submit", form="user_form") }}
+        {{ form.submit(class_="button has-background-link-dark has-text-white-bis", type="submit", form="user_form") }}
       </p>
     </div>
   </div>
